# Patronicos

./: CMakeLists.txt  PatoMec.cbp  PatoMec.depend  Patronicos.cbp  Patronicos.depend  Patronicos.layout  trabalho_ipe.cbp  trabalho_ipe.depend  trabalho_ipe.layout
hdr/: X Macros.h  gerais.h  geral.h  jogo.h  mapa.h  types.h  ui.h  ui_cenas.h  utils.h
other/: main antigo.txt
src/: X Macros.h  conf.c  entides.c  gerais.c  gerais.h  geral.c  jogo.c  jogo.h  main.c  mapa.c  mapa.h  menu.c  pause.c  ui.c  utils.c
